Refactor package structure and update metadata for profanity package. Changed placeholders to actual values in composer.json, README.md, and other files. Removed unused files and updated the changelog. The package is now named "profanity" under the "Xavizera" namespace.

--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,16 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "xavizera/profanity",
+    "description": "A Laravel package to filter multi-language profanity words",
     "keywords": [
-        ":vendor_name",
+        "Xavizera",
         "laravel",
-        ":package_slug"
+        "profanity"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/xavizera/profanity",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Henri Xavier",
             "role": "Developer"
         }
     ],
@@ -30,18 +29,17 @@
         "pestphp/pest-plugin-laravel": "^3.0",
         "phpstan/extension-installer": "^1.3||^2.0",
         "phpstan/phpstan-deprecation-rules": "^1.1||^2.0",
-        "phpstan/phpstan-phpunit": "^1.3||^2.0",
-        "spatie/laravel-ray": "^1.35"
+        "phpstan/phpstan-phpunit": "^1.3||^2.0"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src/",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories/"
+            "Xavizera\\Profanity\\": "src/",
+            "Xavizera\\Profanity\\Database\\Factories\\": "database/factories/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests/",
+            "Xavizera\\Profanity\\Tests\\": "tests/",
             "Workbench\\App\\": "workbench/app/"
         }
     },
@@ -63,10 +61,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Xavizera\\Profanity\\ProfanityServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "Profanity": "Xavizera\\Profanity\\Facades\\Profanity"
             }
         }
     },
